k8s/deployment-istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: spring-boot
#spec:
#  hosts:
#    - "*"
#  gateways:
#    - gateway
#  http:
#    - match:
#        - uri:
#            prefix: /api/companies
#      route:
#        - destination:
#            host: spring-boot
#            port:
#              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-service
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /api/todos
      route:
        - destination:
            host: todo-service
            port:
              number: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-oauth-service
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /oauth
      route:
        - destination:
            host: istio-oauth-service
            port:
              number: 9999
